Inclusão do Background da página

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css"> 
     <script type="text/javascript" src="Js/script.js"></script>
 </head>
+
 <body>
     <table class="calculadora">
         <tr>
@@ -17,8 +18,8 @@
         
             <td>
                 <input
-                class="button" type="button" value="C" onclick="clearScreen()"
-                style="background-color: #ff0000;"/>
+                class="button-amarelo" type="button" value="C" onclick="clearScreen()"
+                style="background-color:#FEC52B;"/>
             </td>
       
         </tr>
@@ -99,8 +100,8 @@
                         onclick="display('*')"/>
             </td>
             <td>
-                <input class="button" type="button" value="="
-                        onclick="calculate()" style="background-color: #ff0000;"/>
+                <input class="button-amarelo" type="button" value="="
+                        onclick="calculate()" style="background-color: #FEC52B;"/>
             </td>
         </tr>
 </table>
